Updated API and adding devopsy things
